Refactor Dockerfile to use Alpine image and update requirements.txt for explicit gunicorn inclusion

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 fastapi
-uvicorn[standard]  # Incluye gunicorn, que es bueno para producción
+uvicorn[standard]
+gunicorn          # Añadido explícitamente
 python-multipart
 jinja2
